src/include/c_api.h

    typedef uint16_t U16Char;
    typedef uint16_t U16Char;
/// @note General C API conventions in this file:
///   - editor_handle:   EditorCore handle (intptr_t) returned by create_editor
///   - document_handle: Document handle (intptr_t) returned by create_document_xxx
///   - out_size:        For all APIs that return binary payloads, this outputs the byte length
///   - Coordinate system: line / column are both 0-based
///   - Payload uses native byte order (LE). Caller must free it with free_binary_data
///   - These common rules are not repeated in each function comment

/// Text measurement callback set, passed when creating EditorCore
typedef struct {
    float (EDITOR_CALL* measure_text_width)(const U16Char* text, int32_t font_style);
    float (EDITOR_CALL* measure_inlay_hint_width)(const U16Char* text);
    float (EDITOR_CALL* measure_icon_width)(int32_t icon_id);
    void  (EDITOR_CALL* get_font_metrics)(float* arr, size_t length);
} text_measurer_t;
/// Batch set diagnostic decorations for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
///             u32 entry_count,
///             [u32 line, u32 diag_count, [u32 column, u32 length, i32 severity, i32 color] x diag_count] x entry_count
/// @param size payload byte length
EDITOR_API void editor_set_batch_line_diagnostics(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Clear all diagnostic decorations
EDITOR_API void editor_clear_diagnostics(intptr_t editor_handle);
/// Set indent guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
EDITOR_API void editor_set_indent_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Set bracket branch guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups:
///             [u32 parent_line, u32 parent_column, u32 end_line, u32 end_column,
///              u32 child_count, then repeat child_count groups: [u32 child_line, u32 child_column]]
/// @param size payload byte length
EDITOR_API void editor_set_bracket_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Set control-flow back-arrow guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
EDITOR_API void editor_set_flow_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Set horizontal separator guide list (compact binary, global replace)
/// @param data payload(LE):
///             u32 count, then repeat count groups
///             [i32 line, i32 style, i32 count, u32 text_end_column]
/// @param size payload byte length
EDITOR_API void editor_set_separator_guides(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Clear all code structure lines (indent guides, bracket guides, control-flow arrows, separators)
EDITOR_API void editor_clear_guides(intptr_t editor_handle);
/// Set bracket pair list (override default (){}[])
/// @param open_chars Open bracket char array (UTF-32)
/// @param close_chars Close bracket char array (UTF-32)
/// @param count Bracket pair count
EDITOR_API void editor_set_bracket_pairs(intptr_t editor_handle, const uint32_t* open_chars, const uint32_t* close_chars, size_t count);
/// Externally set exact bracket match result (override built-in char scan)
/// @param open_line open bracket line number(0-based)
/// @param open_col open bracket column number (0-based)
/// @param close_line close bracket line number(0-based)
/// @param close_col close bracket column number (0-based)
EDITOR_API void editor_set_matched_brackets(intptr_t editor_handle, size_t open_line, size_t open_col, size_t close_line, size_t close_col);
/// Clear externally set bracket match result (fall back to built-in char scan)
EDITOR_API void editor_clear_matched_brackets(intptr_t editor_handle);
/// Set foldable region list (compact binary)
/// @param data payload(LE):
///             u32 region_count, then repeat for region_count groups
///             [u32 start_line, u32 end_line]
/// @param size payload byte length
EDITOR_API void editor_set_fold_regions(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Toggle fold state of specified line
/// @param line Line number(0-based)
/// @return 1=found and toggled, 0=region not found
EDITOR_API int editor_toggle_fold(intptr_t editor_handle, size_t line);
/// Fold region containing specified line
/// @param line Line number(0-based)
/// @return 1=success, 0=not found
EDITOR_API int editor_fold_at(intptr_t editor_handle, size_t line);
/// Unfold region containing specified line
/// @param line Line number(0-based)
/// @return 1=success, 0=not found
EDITOR_API int editor_unfold_at(intptr_t editor_handle, size_t line);
/// Fold all regions
EDITOR_API void editor_fold_all(intptr_t editor_handle);
/// Unfold all regions
EDITOR_API void editor_unfold_all(intptr_t editor_handle);
/// Check whether specified line is visible (not hidden by folding)
/// @param line Line number(0-based)
/// @return 1=visible, 0=hidden
EDITOR_API int editor_is_line_visible(intptr_t editor_handle, size_t line);
/// Clear all highlight spans
EDITOR_API void editor_clear_highlights(intptr_t editor_handle);
/// Clear all inlay hints
EDITOR_API void editor_clear_inlay_hints(intptr_t editor_handle);
/// Clear all phantom texts
EDITOR_API void editor_clear_phantom_texts(intptr_t editor_handle);
/// Clear all decoration data
EDITOR_API void editor_clear_all_decorations(intptr_t editor_handle);
/// Insert VSCode snippet template and enter linked editing mode (convenience API)
/// @param snippet_template VSCode snippet template (UTF8)
/// @return TextEditResult binary payload, returns NULL if there is no change
EDITOR_API const uint8_t* editor_insert_snippet(intptr_t editor_handle, const char* snippet_template, size_t* out_size);
/// Start linked editing mode with generic LinkedEditingModel (compact binary)
/// @param data payload(LE):
///             u32 group_count, u32 range_count, u32 string_blob_size
///             group_count groups: [u32 index, u32 default_text_offset, u32 default_text_len]
///             range_count groups: [u32 group_ordinal, u32 start_line, u32 start_col, u32 end_line, u32 end_col]
///             UTF-8 string blob(default_text_offset=0xFFFFFFFF means null)
/// @param size payload byte length
EDITOR_API void editor_start_linked_editing(intptr_t editor_handle, const uint8_t* data, size_t size);
/// Whether linked editing mode is active
/// @return 1=yes, 0=no
EDITOR_API int editor_is_in_linked_editing(intptr_t editor_handle);
/// Linked editing: jump to next tab stop
/// @return 1=jumped successfully, 0=already at end (session ends automatically)
EDITOR_API int editor_linked_editing_next(intptr_t editor_handle);
/// Linked editing: jump to previous tab stop
/// @return 1=jumped successfully, 0=already at first
EDITOR_API int editor_linked_editing_prev(intptr_t editor_handle);
/// Cancel linked editing mode
EDITOR_API void editor_cancel_linked_editing(intptr_t editor_handle);
/// Free string memory allocated on C++ side
/// @param string_ptr String pointer
EDITOR_API void free_u16_string(intptr_t string_ptr);
/// Free binary memory returned by C++ side
/// Applies to all APIs that return const uint8_t* + out_size.
/// Platform must call once after reading payload; NULL/0 can be safely ignored.
/// @param data_ptr Start address of binary payload
EDITOR_API void free_binary_data(intptr_t data_ptr);