platform/Apple/Sources/SweetEditorBridge/include/SweetEditorBridge.h

void editor_set_auto_closing_pairs(intptr_t editor_handle, const uint32_t* open_chars, const uint32_t* close_chars, size_t count);