platform/Flutter/sweeteditor/lib/sweeteditor_bindings_generated.dart


/// Batch set diagnostic decorations for multiple lines (compact binary, fixed length)
/// @param data payload(LE):
/// u32 entry_count,
/// [u32 line, u32 diag_count, [u32 column, u32 length, i32 severity, i32 color] x diag_count] x entry_count
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_batch_line_diagnostics(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Clear all diagnostic decorations
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_diagnostics(int editor_handle);

/// Set indent guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_indent_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Set bracket branch guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups:
/// [u32 parent_line, u32 parent_column, u32 end_line, u32 end_column,
/// u32 child_count, then repeat child_count groups: [u32 child_line, u32 child_column]]
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_bracket_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Set control-flow back-arrow guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [u32 start_line, u32 start_column, u32 end_line, u32 end_column]
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_flow_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Set horizontal separator guide list (compact binary, global replace)
/// @param data payload(LE):
/// u32 count, then repeat count groups
/// [i32 line, i32 style, i32 count, u32 text_end_column]
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_separator_guides(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Clear all code structure lines (indent guides, bracket guides, control-flow arrows, separators)
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_guides(int editor_handle);

/// Set bracket pair list (override default (){}[])
/// @param open_chars Open bracket char array (UTF-32)
/// @param close_chars Close bracket char array (UTF-32)
/// @param count Bracket pair count
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Size,
  )
>(assetId: _sweeteditorAssetId)
external void editor_set_bracket_pairs(
  int editor_handle,
  ffi.Pointer<ffi.Uint32> open_chars,
  ffi.Pointer<ffi.Uint32> close_chars,
  int count,
);

/// Set auto-closing bracket pair list used by automatic pair insertion/deletion
/// @param open_chars Open bracket char array (UTF-32)
/// @param close_chars Close bracket char array (UTF-32)
/// @param count Bracket pair count
@ffi.Native<
  ffi.Void Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint32>,
    ffi.Pointer<ffi.Uint32>,
    ffi.Size,
  )
>(assetId: _sweeteditorAssetId)
external void editor_set_auto_closing_pairs(
  int editor_handle,
  ffi.Pointer<ffi.Uint32> open_chars,
  ffi.Pointer<ffi.Uint32> close_chars,
  int count,
);

/// Externally set exact bracket match result (override built-in char scan)
/// @param open_line open bracket line number(0-based)
/// @param open_col open bracket column number (0-based)
/// @param close_line close bracket line number(0-based)
/// @param close_col close bracket column number (0-based)
@ffi.Native<
  ffi.Void Function(ffi.IntPtr, ffi.Size, ffi.Size, ffi.Size, ffi.Size)
>(assetId: _sweeteditorAssetId)
external void editor_set_matched_brackets(
  int editor_handle,
  int open_line,
  int open_col,
  int close_line,
  int close_col,
);

/// Clear externally set bracket match result (fall back to built-in char scan)
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_matched_brackets(int editor_handle);

/// Set foldable region list (compact binary)
/// @param data payload(LE):
/// u32 region_count, then repeat for region_count groups
/// [u32 start_line, u32 end_line]
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_set_fold_regions(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Toggle fold state of specified line
/// @param line Line number(0-based)
/// @return 1=found and toggled, 0=region not found
@ffi.Native<ffi.Int Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external int editor_toggle_fold(int editor_handle, int line);

/// Fold region containing specified line
/// @param line Line number(0-based)
/// @return 1=success, 0=not found
@ffi.Native<ffi.Int Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external int editor_fold_at(int editor_handle, int line);

/// Unfold region containing specified line
/// @param line Line number(0-based)
/// @return 1=success, 0=not found
@ffi.Native<ffi.Int Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external int editor_unfold_at(int editor_handle, int line);

/// Fold all regions
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_fold_all(int editor_handle);

/// Unfold all regions
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_unfold_all(int editor_handle);

/// Check whether specified line is visible (not hidden by folding)
/// @param line Line number(0-based)
/// @return 1=visible, 0=hidden
@ffi.Native<ffi.Int Function(ffi.IntPtr, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external int editor_is_line_visible(int editor_handle, int line);

/// Clear all highlight spans
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_highlights(int editor_handle);

/// Clear all inlay hints
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_inlay_hints(int editor_handle);

/// Clear all phantom texts
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_phantom_texts(int editor_handle);

/// Clear all decoration data
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_clear_all_decorations(int editor_handle);

/// Insert VSCode snippet template and enter linked editing mode (convenience API)
/// @param snippet_template VSCode snippet template (UTF8)
/// @return TextEditResult binary payload, returns NULL if there is no change
@ffi.Native<
  ffi.Pointer<ffi.Uint8> Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Size>,
  )
>(assetId: _sweeteditorAssetId)
external ffi.Pointer<ffi.Uint8> editor_insert_snippet(
  int editor_handle,
  ffi.Pointer<ffi.Char> snippet_template,
  ffi.Pointer<ffi.Size> out_size,
);

/// Start linked editing mode with generic LinkedEditingModel (compact binary)
/// @param data payload(LE):
/// u32 group_count, u32 range_count, u32 string_blob_size
/// group_count groups: [u32 index, u32 default_text_offset, u32 default_text_len]
/// range_count groups: [u32 group_ordinal, u32 start_line, u32 start_col, u32 end_line, u32 end_col]
/// UTF-8 string blob(default_text_offset=0xFFFFFFFF means null)
/// @param size payload byte length
@ffi.Native<ffi.Void Function(ffi.IntPtr, ffi.Pointer<ffi.Uint8>, ffi.Size)>(
  assetId: _sweeteditorAssetId,
)
external void editor_start_linked_editing(
  int editor_handle,
  ffi.Pointer<ffi.Uint8> data,
  int size,
);

/// Whether linked editing mode is active
/// @return 1=yes, 0=no
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_is_in_linked_editing(int editor_handle);

/// Linked editing: jump to next tab stop
/// @return 1=jumped successfully, 0=already at end (session ends automatically)
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_linked_editing_next(int editor_handle);

/// Linked editing: jump to previous tab stop
/// @return 1=jumped successfully, 0=already at first
@ffi.Native<ffi.Int Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external int editor_linked_editing_prev(int editor_handle);

/// Cancel linked editing mode
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void editor_cancel_linked_editing(int editor_handle);

/// Free string memory allocated on C++ side
/// @param string_ptr String pointer
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_u16_string(int string_ptr);

/// Free binary memory returned by C++ side
/// Applies to all APIs that return const uint8_t* + out_size.
/// Platform must call once after reading payload; NULL/0 can be safely ignored.
/// @param data_ptr Start address of binary payload
@ffi.Native<ffi.Void Function(ffi.IntPtr)>(assetId: _sweeteditorAssetId)
external void free_binary_data(int data_ptr);

/// Text measurement callback set, passed when creating EditorCore
final class text_measurer_t extends ffi.Struct {
  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Float Function(ffi.Pointer<ffi.Uint16> text, ffi.Int32 font_style)
    >
  >
  measure_text_width;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Float Function(ffi.Pointer<ffi.Uint16> text)>
  >
  measure_inlay_hint_width;

  external ffi.Pointer<
    ffi.NativeFunction<ffi.Float Function(ffi.Int32 icon_id)>
  >
  measure_icon_width;

  external ffi.Pointer<
    ffi.NativeFunction<
      ffi.Void Function(ffi.Pointer<ffi.Float> arr, ffi.Size length)
    >
  >
  get_font_metrics;
}
